# snake

./: .gitignore  Cargo.toml  Cross.toml
.cargo/: config.toml
.github/workflows/: build-windows-beta.yml  build-windows.yml
assets/shaders/: gamefield.wgsl  healthbar.wgsl  icon_hover_effect.wgsl
image_src/: coinbag.kra  mouse.kra
image_src/upgrades/: snip.kra
src/: constants.rs  main.rs  math.rs
src/systems/: debug_output_shown.rs  increase_hunger.rs  increase_speed.rs  mod.rs  move_food.rs  player_input.rs  spawn_coins.rs  spawn_pause_menu.rs  spawn_snake.rs  split_snake.rs  update_coins_output.rs  update_health.rs  update_health_material.rs  update_high_score.rs  update_score_output.rs  upgrade_menu_event_handler.rs  upgrade_menu_handler.rs
