[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package."*"]
opt-level = 3

[dependencies]
rand = "0.8.5"

[dependencies.bevy]
version = "0.12"
default-features = false
features = [
	# core features
	"multi-threaded",
	"bevy_render",
	"bevy_sprite",
	"bevy_text",
	"bevy_ui",
	"bevy_gilrs",

	# platform support
	"x11",
	"wayland",

	# dev/debug features
	"dynamic_linking",
]
