[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package."*"]
opt-level = 3

[dependencies]
rand = "0.8.5"
blake3 = { version = "1.5", features=["pure"] } # not actually a dependency of ours, but works around https://github.com/bevyengine/bevy/issues/10425

[dependencies.bevy]
version = "0.12"
default-features = false
features = [
	# core features
	"multi-threaded",
	"bevy_render",
	"bevy_sprite",
	"bevy_text",
	"bevy_ui",
	"bevy_gilrs",
	"bevy_pbr",

	# file formats
	"png",

	# shader formats
	"shader_format_spirv",


	# platform support
	"x11",
	"wayland",

	# dev/debug features -- disable these before doing a release build!
	# "dynamic_linking",
]
